Cambio a FileMode.Create para evitar errores al borrar una tarea

--- a/Tareas.Json
+++ b/Tareas.Json
@@ -1,1 +1,1 @@
-[{"Id":1,"Titulo":"Calculo IV","Descripcion":"Examen 9/10","Estado":2},{"Id":0,"Titulo":"Taller II","Descripcion":"Examen 9/10","Estado":0},{"Id":0,"Titulo":"Taller II","Descripcion":"Examen 9/10","Estado":0}]
+[{"Id":0,"Titulo":"Taller II","Descripcion":"Examen 9/10","Estado":0}]
